--- a/streetviewExample/app/src/main/res/layout/home_fragment.xml
+++ b/streetviewExample/app/src/main/res/layout/home_fragment.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="example.streetview.stamsoft.app.streetviewexample.MainActivity">
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -13,7 +12,9 @@
         <FrameLayout
             android:id="@+id/streetviewpanorama"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" >
+
+        </FrameLayout>
 
         <LinearLayout
             android:id="@+id/destinations"
@@ -57,29 +58,33 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="190dp"
             android:layout_below="@+id/destinations">
 
             <Button
                 android:id="@+id/move_position"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/settings"
+                android:layout_alignBottom="@+id/settings"
+                android:layout_alignParentStart="true"
                 android:background="@android:color/transparent"
-                android:layout_centerVertical="true"
                 android:text="@string/walk_panorama"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"/>
 
             <Button
                 android:id="@+id/settings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="12dp"
                 android:background="@android:color/transparent"
-                android:layout_centerVertical="true"
                 android:text="@string/settings"
-                android:layout_alignParentRight="true"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"/>
 
             <RelativeLayout
+                android:id="@+id/relativeLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -93,9 +98,9 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
-                    android:minWidth="48dp"
                     android:background="@android:color/transparent"
-                    android:text="@string/left_arrow" />
+                    android:minWidth="48dp"
+                    android:text="@string/left_arrow"/>
 
                 <Button
                     android:id="@+id/pan_up"
@@ -103,9 +108,9 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_toRightOf="@id/pan_left"
-                    android:minWidth="48dp"
                     android:background="@android:color/transparent"
-                    android:text="@string/up_arrow" />
+                    android:minWidth="48dp"
+                    android:text="@string/up_arrow"/>
 
                 <Button
                     android:id="@+id/pan_down"
@@ -113,9 +118,9 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/pan_up"
                     android:layout_toRightOf="@id/pan_left"
-                    android:minWidth="48dp"
                     android:background="@android:color/transparent"
-                    android:text="@string/down_arrow" />
+                    android:minWidth="48dp"
+                    android:text="@string/down_arrow"/>
 
                 <Button
                     android:id="@+id/pan_right"
@@ -123,10 +128,41 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@id/pan_down"
-                    android:minWidth="48dp"
                     android:background="@android:color/transparent"
-                    android:text="@string/right_arrow" />
+                    android:minWidth="48dp"
+                    android:text="@string/right_arrow"/>
             </RelativeLayout>
+
+            <Button
+                android:id="@+id/everywhere"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/move_position"
+                android:background="@android:color/transparent"
+                android:text="@string/go_to_world"
+                android:textColor="#ffffff"/>
+
+            <EditText
+                android:id="@+id/place_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:textColor="#ffffff"
+                android:layout_below="@+id/everywhere"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="13dp"/>
+
+            <Button
+                android:id="@+id/search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/place_name"
+                android:layout_centerHorizontal="true"
+                android:background="@android:color/transparent"
+                android:text="@string/search"
+                android:textColor="#ffffff"/>
 
         </RelativeLayout>
 
