--- a/streetviewExample/app/src/main/res/layout/home_fragment.xml
+++ b/streetviewExample/app/src/main/res/layout/home_fragment.xml
@@ -148,7 +148,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:minHeight="32dp"
+                android:inputType="text"
+                android:imeOptions="actionSearch"
                 android:textColor="#ffffff"
                 android:layout_below="@+id/everywhere"
                 android:layout_alignParentStart="true"
