--- a/streetviewExample/app/src/main/res/drawable/unselected.xml
+++ b/streetviewExample/app/src/main/res/drawable/unselected.xml
@@ -1,3 +1,2 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" android:padding="90dp">
-    <solid android:color="#66FF6E4E"/>
-</shape>
+<bitmap android:src="@drawable/locations_button_selected"
+        xmlns:android="http://schemas.android.com/apk/res/android"/>
