--- a/FootballMan/app/src/main/res/layout/fragment_persons.xml
+++ b/FootballMan/app/src/main/res/layout/fragment_persons.xml
@@ -1,4 +1,5 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
@@ -7,9 +8,19 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <include layout="@layout/empty_layout"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/team_players"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</FrameLayout>
+        android:layout_height="400dp"/>
+
+    <include layout="@layout/empty_layout"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/next_team"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:layout_marginTop="400dp"
+        android:layout_marginLeft="320dp"
+        android:src="@mipmap/next_round"/>
+</RelativeLayout>
