--- a/FootballMan/app/src/main/res/layout/person_raw.xml
+++ b/FootballMan/app/src/main/res/layout/person_raw.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:layout_marginTop="?attr/actionBarSize"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:orientation="horizontal"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
     <include layout="@layout/buttons"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     <TextView
         android:id="@+id/person_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+      />
     <TextView
         android:id="@+id/person_number"
         android:layout_width="wrap_content"
         android:textSize="20sp"
-        android:layout_marginLeft="49dp"
-        android:layout_marginStart="49dp"
-        android:layout_height="wrap_content"/>
+        android:layout_marginLeft="15dp"
+        android:layout_height="wrap_content"
+        />
+    </LinearLayout>
+    <include layout ="@layout/ball"/>
 </RelativeLayout>
