--- a/FootballMan/app/src/main/res/layout/team_raw.xml
+++ b/FootballMan/app/src/main/res/layout/team_raw.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content">
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/league"
+        android:id="@+id/team_raw"
         android:textSize="30sp"
         />
-    <include layout="@layout/ball"/>
     <include layout="@layout/buttons"/>
 </RelativeLayout>
