--- a/FootballMan/app/src/main/res/layout/fragment_persons.xml
+++ b/FootballMan/app/src/main/res/layout/fragment_persons.xml
@@ -19,8 +19,14 @@
         android:id="@+id/next_team"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/team_players"
+        android:layout_marginEnd="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="35dp"
         android:clickable="true"
-        android:layout_marginTop="400dp"
-        android:layout_marginLeft="320dp"
-        android:src="@mipmap/next_round"/>
+        android:src="@drawable/forward"/>
+
+
 </RelativeLayout>
