--- a/FootballMan/app/src/main/res/values/styles.xml
+++ b/FootballMan/app/src/main/res/values/styles.xml
@@ -6,6 +6,15 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
     </style>
+
+    <style name="InGameImageView" >
+        <item name="android:layout_width">30dp</item>
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+
 
 </resources>
