--- a/streetviewExample/app/src/main/res/layout/home_fragment.xml
+++ b/streetviewExample/app/src/main/res/layout/home_fragment.xml
@@ -1,93 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="example.streetview.stamsoft.app.streetviewexample.MainActivity">
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             tools:context="example.streetview.stamsoft.app.streetviewexample.MainActivity">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
+
         <FrameLayout
             android:id="@+id/streetviewpanorama"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true">
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true">
 
         </FrameLayout>
+
         <ImageView
-            android:layout_marginTop="5dp"
+            android:id="@+id/image_logo"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/image_logo"
-            android:src="@drawable/icon"
-            android:contentDescription="@string/logo"
-            android:layout_alignTop="@+id/settings"
             android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/settings"
+            android:layout_marginTop="5dp"
             android:adjustViewBounds="true"
-            android:scaleType="fitXY"/>
-        <LinearLayout
-            android:id="@+id/destinations"
-            android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:weightSum="3"
-            android:layout_marginTop="60dp">
+            android:contentDescription="@string/logo"
+            android:scaleType="fitXY"
+            android:src="@drawable/icon"/>
 
-            <Button
-                android:id="@+id/sydney"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:background="@drawable/button_selector"
-                android:text="@string/go_to_sydney"
-                android:layout_marginStart="10dp"
-                android:textColor="#ffffff"
-                android:textSize="15sp" />
 
-            <Button
-                android:id="@+id/sanfran"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_marginStart="10dp"
-                android:paddingTop="5dp"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:paddingBottom="5dp"
-                android:background="@drawable/button_selector"
-                android:text="@string/go_to_san_fran"
-                android:textColor="#ffffff"
-                android:textSize="15sp" />
+        <Button
+            android:id="@+id/change_destination"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/button_selector"
+            android:paddingBottom="5dp"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"
+            android:paddingTop="5dp"
+            android:text="@string/location"
+            android:textColor="#ffffff"
+            android:textSize="15sp"/>
 
-            <Button
-                android:id="@+id/santorini"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_weight="1"
-                android:paddingTop="5dp"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:paddingBottom="5dp"
-                android:background="@drawable/button_selector"
-                android:text="@string/go_to_santorini"
-                android:textColor="#ffffff"
-                android:textSize="15sp" />
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:gravity="center_horizontal"
-            android:layout_below="@+id/destinations"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="110dp"
+            android:gravity="center_horizontal">
+
             <Button
                 android:id="@+id/everywhere"
                 android:layout_width="wrap_content"
@@ -96,7 +63,8 @@
                 android:text="@string/go_to_world"
                 android:textColor="#ffffff"
                 android:textSize="17sp"
-               />
+                />
+
             <EditText
                 android:id="@+id/place_name"
                 android:layout_width="wrap_content"
@@ -113,12 +81,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
+                android:layout_marginTop="200dp"
                 android:background="@drawable/button_selector"
                 android:text="@string/search"
-                android:layout_marginTop="200dp"
                 android:textColor="#ffffff"/>
 
         </LinearLayout>
+
         <RelativeLayout
             android:id="@+id/relativeLayout"
             android:layout_width="wrap_content"
@@ -168,6 +137,7 @@
                 android:text="@string/right_arrow"/>
 
         </RelativeLayout>
+
         <Button
             android:id="@+id/move_position"
             android:layout_width="wrap_content"
@@ -178,6 +148,7 @@
             android:background="@android:color/transparent"
             android:text="@string/walk_panorama"
             android:textColor="#ffffff"/>
+
         <Button
             android:id="@+id/settings"
             android:layout_width="wrap_content"
