--- a/FootballMan/app/src/main/res/layout/player_in_game_raw.xml
+++ b/FootballMan/app/src/main/res/layout/player_in_game_raw.xml
@@ -15,6 +15,10 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/game_stat"
+            android:layout_width="20dp"
+            android:layout_height="20dp"/>
 
         <ImageView
             android:id="@+id/make_red_card"
