--- a/FootballMan/app/src/main/res/layout/statistics_raw.xml
+++ b/FootballMan/app/src/main/res/layout/statistics_raw.xml
@@ -4,7 +4,7 @@
                 android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:layout_width="200dp"
+        android:layout_width="190dp"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
@@ -12,6 +12,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center_horizontal"
             android:orientation="horizontal">
 
             <TextView
@@ -28,7 +29,7 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_width="200dp"
+        android:layout_width="190dp"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true">
@@ -36,6 +37,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center_horizontal"
             android:orientation="horizontal">
 
             <ImageView
