--- a/FootballMan/app/src/main/res/layout/fragment_home.xml
+++ b/FootballMan/app/src/main/res/layout/fragment_home.xml
@@ -1,22 +1,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/home_fragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginTop="?attr/actionBarSize"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             tools:context="com.apress.gerber.footballman.Fragments.HomeFragment" >
+                tools:context="com.apress.gerber.footballman.Fragments.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
     <include layout="@layout/empty_layout"/>
+
     <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
         android:id="@+id/recycle_leagues"
-        android:paddingTop="5dp"
+        android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:paddingTop="5dp"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
