--- a/FootballMan/app/src/main/res/values/styles.xml
+++ b/FootballMan/app/src/main/res/values/styles.xml
@@ -14,6 +14,11 @@
         <item name="android:layout_marginLeft">30dp</item>
         <item name="android:layout_height">match_parent</item>
     </style>
+    <style name="InGameImageViewLand" >
+        <item name="android:layout_width">15dp</item>
+        <item name="android:layout_marginLeft">15dp</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
     <style name="textView">
         <item name="android:textSize">17sp</item>
         <item name="android:layout_height">wrap_content</item>
