--- a/FootballMan/app/src/main/res/layout/buttons.xml
+++ b/FootballMan/app/src/main/res/layout/buttons.xml
@@ -3,21 +3,28 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true">
     <ImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/delete"
         android:paddingTop="5dp"
         android:src="@drawable/if_delete_370086"
-        android:layout_marginLeft="300dp"
-        android:layout_marginStart="300dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
+
     <ImageView
         android:layout_width="30dp"
         android:id="@+id/update"
         android:layout_height="30dp"
         android:paddingTop="5dp"
-        android:layout_marginLeft="330dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:src="@mipmap/pen_icon_61059"/>
+    </LinearLayout>
 </RelativeLayout>
