--- a/FootballMan/app/src/main/res/layout/fragment_start_match.xml
+++ b/FootballMan/app/src/main/res/layout/fragment_start_match.xml
@@ -2,23 +2,27 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:id="@+id/game_layout"
               android:layout_width="match_parent"
+              android:layout_weight="3"
               android:layout_height="match_parent"
               android:layout_marginTop="?attr/actionBarSize"
               android:orientation="vertical"
               tools:context="com.apress.gerber.footballman.Fragments.StartMatchFragment">
 
 
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/home_players"
         android:layout_width="match_parent"
-        android:layout_height="220dp"/>
+        android:layout_weight="1.2"
+        android:layout_height="wrap_content"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#d3d3d3 " />
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="0dp"
+        android:layout_weight="0.6"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -123,8 +127,9 @@
         android:background="#d3d3d3 " />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/guest_players"
+        android:layout_weight="1.2"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_height="wrap_content"
         />
 
 </LinearLayout>
