--- a/FootballMan/app/src/main/res/layout/player_in_game_raw_tablet.xml
+++ b/FootballMan/app/src/main/res/layout/player_in_game_raw_tablet.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="80dp"
+              android:layout_height="120dp"
+              android:gravity="center"
               android:paddingTop="4dp"
               android:paddingEnd="4dp"
               android:paddingBottom="4dp"
@@ -12,21 +13,22 @@
         android:id="@+id/player_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
+        android:textSize="40sp"
         />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="60dp"
+        android:gravity="center"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/game_stat"
-            android:layout_width="20dp"
-            android:layout_height="20dp"/>
+            android:layout_width="50dp"
+            android:layout_height="50dp"/>
 
         <ImageView
             android:id="@+id/make_red_card"
-            style="@style/InGameImageView"
+            style="@style/InGameImageViewTablet"
             android:src="@mipmap/red"/>
 
         <TextView
@@ -36,7 +38,7 @@
 
         <ImageView
             android:id="@+id/make_yellow_card"
-            style="@style/InGameImageView"
+            style="@style/InGameImageViewTablet"
             android:src="@mipmap/yellow"/>
 
         <TextView
@@ -46,7 +48,7 @@
 
         <ImageView
             android:id="@+id/make_goal"
-            style="@style/InGameImageView"
+            style="@style/InGameImageViewTablet"
             android:src="@mipmap/ic_launcher_foreground"/>
 
         <TextView
@@ -67,7 +69,7 @@
 
         <ImageView
             android:id="@+id/make_assist"
-            style="@style/InGameImageView"
+            style="@style/InGameImageViewTablet"
             android:src="@mipmap/assist"
             />
         <TextView
