--- a/FootballMan/app/src/main/res/values/styles.xml
+++ b/FootballMan/app/src/main/res/values/styles.xml
@@ -14,9 +14,20 @@
         <item name="android:layout_marginLeft">30dp</item>
         <item name="android:layout_height">match_parent</item>
     </style>
+    <style name="InGameImageViewTablet" >
+        <item name="android:layout_width">60dp</item>
+        <item name="android:layout_marginLeft">60dp</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
     <style name="InGameImageViewLand" >
         <item name="android:layout_width">15dp</item>
         <item name="android:layout_marginLeft">15dp</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <style name="InGameImageViewLandTablet">
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_marginLeft">35dp</item>
         <item name="android:layout_height">match_parent</item>
     </style>
     <style name="textView">
