--- a/FootballMan/app/src/main/res/layout/fragment_start_match.xml
+++ b/FootballMan/app/src/main/res/layout/fragment_start_match.xml
@@ -4,7 +4,6 @@
               android:layout_width="match_parent"
               android:layout_weight="3"
               android:layout_height="match_parent"
-              android:layout_marginTop="?attr/actionBarSize"
               android:orientation="vertical"
               tools:context="com.apress.gerber.footballman.Fragments.StartMatchFragment">
 
@@ -14,7 +13,7 @@
         android:id="@+id/home_players"
         android:layout_width="match_parent"
         android:layout_weight="1.2"
-        android:layout_height="wrap_content"/>
+        android:layout_height="0dp"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
@@ -27,7 +26,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_weight="0.3"
+            android:layout_height="0dp"
             >
 
             <LinearLayout
@@ -98,7 +98,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_weight="0.3"
+            android:layout_height="0dp"
             >
 
             <TextView
@@ -129,7 +130,7 @@
         android:id="@+id/guest_players"
         android:layout_weight="1.2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         />
 
 </LinearLayout>
