--- a/FootballMan/app/src/main/res/layout/game_raw.xml
+++ b/FootballMan/app/src/main/res/layout/game_raw.xml
@@ -3,6 +3,7 @@
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_weight="3"
+              style="@style/paddings"
               android:layout_height="wrap_content">
     <TextView
         android:layout_width="wrap_content"
