--- a/FootballMan/app/src/main/res/layout/land_player_in_game_raw.xml
+++ b/FootballMan/app/src/main/res/layout/land_player_in_game_raw.xml
@@ -2,6 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="80dp"
+              android:paddingTop="4dp"
+              android:paddingEnd="4dp"
+              android:paddingBottom="4dp"
+              android:paddingStart="4dp"
               android:orientation="vertical">
 
     <TextView
