--- a/FootballMan/app/src/main/res/layout/league_raw.xml
+++ b/FootballMan/app/src/main/res/layout/league_raw.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="wrap_content"
+                style="@style/paddings"
               android:layout_height="wrap_content">
     <TextView
         android:layout_width="wrap_content"
