--- a/FootballMan/app/src/main/res/layout/person_raw.xml
+++ b/FootballMan/app/src/main/res/layout/person_raw.xml
@@ -3,6 +3,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:orientation="horizontal"
               android:layout_width="wrap_content"
+                style="@style/paddings"
               android:layout_height="wrap_content">
     <include layout="@layout/buttons"/>
     <LinearLayout
