--- a/FootballMan/app/src/main/res/layout-sw720dp-land/fragment_start_match.xml
+++ b/FootballMan/app/src/main/res/layout-sw720dp-land/fragment_start_match.xml
@@ -1,89 +1,82 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:id="@+id/game_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_weight="3"
-                tools:context="com.apress.gerber.footballman.Fragments.StartMatchFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/game_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_weight="3"
+    android:keepScreenOn="true"
+    android:orientation="horizontal"
+    tools:context="com.apress.gerber.footballman.Fragments.StartMatchFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/home_players"
         android:layout_width="0dp"
-        android:layout_weight="1.25"
         android:layout_height="match_parent"
-        />
+        android:layout_weight="1.25" />
 
     <View
         android:layout_width="2dp"
         android:layout_height="match_parent"
-        android:background="#d3d3d3 "/>
+        android:background="#d3d3d3 " />
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="0.5"
-        android:layout_marginTop="10dp"
         android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_weight="0.5"
         android:orientation="horizontal">
 
         <RelativeLayout
             android:layout_width="0dp"
-            android:layout_weight="0.25"
             android:layout_height="match_parent"
-            >
+            android:layout_weight="0.25">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
 
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@mipmap/red"
-                    />
+                    android:src="@mipmap/red" />
 
                 <TextView
                     android:id="@+id/red_card_number_host"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
+                    android:layout_height="wrap_content" />
 
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@mipmap/yellow"/>
+                    android:src="@mipmap/yellow" />
 
                 <TextView
                     android:id="@+id/yellow_card_number_host"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
+                    android:layout_height="wrap_content" />
 
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@mipmap/faul"/>
+                    android:src="@mipmap/faul" />
 
                 <TextView
                     android:id="@+id/team_fauls_host"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/host_name"
                 android:layout_width="wrap_content"
-                android:layout_marginTop="35dp"
-                android:rotation="270"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                />
+                android:layout_marginTop="35dp"
+                android:rotation="270"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/home_result"
@@ -91,78 +84,74 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerInParent="true"
-                android:textSize="40sp"
-                />
+                android:textSize="40sp" />
         </RelativeLayout>
 
         <View
             android:layout_width="2dp"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimary"/>
+            android:background="@color/colorPrimary" />
 
         <RelativeLayout
-            android:layout_weight="0.25"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            >
+            android:layout_weight="0.25">
 
             <TextView
                 android:id="@+id/guest_name"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="35dp"
-                android:layout_alignParentRight="true"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="35dp"
+                android:paddingEnd="3dp"
+                android:paddingStart="3dp"
                 android:paddingTop="5dp"
                 android:rotation="270"
-                android:paddingStart="3dp"
-                android:paddingEnd="3dp"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/guest_result"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:textSize="40sp"
-                />
+                android:textSize="40sp" />
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                          android:layout_width="match_parent"
-                          android:layout_height="match_parent"
-                          android:layout_marginTop="10dp"
-                          android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
 
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@mipmap/red"/>
+                    android:src="@mipmap/red" />
 
                 <TextView
                     android:id="@+id/red_card_number"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" />
 
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@mipmap/yellow"/>
+                    android:src="@mipmap/yellow" />
 
                 <TextView
                     android:id="@+id/yellow_card_number"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" />
 
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@mipmap/faul"/>
+                    android:src="@mipmap/faul" />
 
                 <TextView
                     android:id="@+id/team_fauls"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" />
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
@@ -170,13 +159,12 @@
     <View
         android:layout_width="2dp"
         android:layout_height="match_parent"
-        android:background="#d3d3d3 "/>
+        android:background="#d3d3d3 " />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/guest_players"
         android:layout_width="0dp"
-        android:layout_weight="1.25"
         android:layout_height="match_parent"
-        />
+        android:layout_weight="1.25" />
 
 </LinearLayout>
