--- a/FootballMan/app/src/main/res/layout-sw720dp/fragment_start_match.xml
+++ b/FootballMan/app/src/main/res/layout-sw720dp/fragment_start_match.xml
@@ -1,24 +1,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:id="@+id/game_layout"
-              android:layout_width="match_parent"
-              android:layout_weight="3"
-              android:layout_height="match_parent"
-              android:layout_marginTop="?attr/actionBarSize"
-              android:orientation="vertical"
-              tools:context="com.apress.gerber.footballman.Fragments.StartMatchFragment">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/game_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="?attr/actionBarSize"
+    android:layout_weight="3"
+    android:keepScreenOn="true"
+    android:orientation="vertical"
+    tools:context="com.apress.gerber.footballman.Fragments.StartMatchFragment">
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/home_players"
         android:layout_width="match_parent"
-        android:layout_weight="1.25"
-        android:layout_height="0dp"/>
+        android:layout_height="0dp"
+        android:layout_weight="1.25" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#d3d3d3 " />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -27,90 +29,81 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_weight="0.25"
             android:layout_height="0dp"
-            >
+            android:layout_weight="0.25">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_marginTop="20dp"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
+                android:layout_marginTop="20dp"
                 android:gravity="right"
-                >
+                android:orientation="horizontal">
+
                 <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@mipmap/red"
-                />
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@mipmap/red" />
 
                 <TextView
                     android:id="@+id/red_card_number_host"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
+                    android:layout_height="wrap_content" />
 
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginStart="20dp"
-                    android:src="@mipmap/yellow"/>
+                    android:src="@mipmap/yellow" />
 
                 <TextView
                     android:id="@+id/yellow_card_number_host"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
+                    android:layout_height="wrap_content" />
 
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginStart="20dp"
-                    android:src="@mipmap/faul"/>
+                    android:src="@mipmap/faul" />
 
                 <TextView
                     android:id="@+id/team_fauls_host"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/host_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
-                />
+                android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/home_result"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:textSize="40sp"
-                />
+                android:textSize="40sp" />
         </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@color/colorPrimary"/>
+            android:background="@color/colorPrimary" />
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_weight="0.25"
             android:layout_height="0dp"
-            >
+            android:layout_weight="0.25">
 
             <TextView
                 android:id="@+id/guest_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:textSize="30sp"
-                />
+                android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/guest_result"
@@ -118,59 +111,61 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:textSize="40sp"
-                />
+                android:textSize="40sp" />
+
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                          android:layout_width="match_parent"
-                          android:layout_marginTop="20dp"
-                          android:layout_height="match_parent"
-                          android:orientation="horizontal">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@mipmap/red"/>
+                    android:src="@mipmap/red" />
 
                 <TextView
                     android:id="@+id/red_card_number"
                     android:layout_width="wrap_content"
 
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" />
 
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginStart="20dp"
-                    android:src="@mipmap/yellow"/>
+                    android:src="@mipmap/yellow" />
 
                 <TextView
                     android:id="@+id/yellow_card_number"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" />
 
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginStart="20dp"
-                    android:src="@mipmap/faul"/>
+                    android:src="@mipmap/faul" />
+
                 <TextView
+                    android:id="@+id/team_fauls"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/team_fauls"/>
+                    android:layout_height="wrap_content" />
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#d3d3d3 " />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/guest_players"
-        android:layout_weight="1.25"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        />
+        android:layout_weight="1.25" />
 
 </LinearLayout>
