--- a/FootballMan/app/src/main/res/layout/fragment_add_person.xml
+++ b/FootballMan/app/src/main/res/layout/fragment_add_person.xml
@@ -15,6 +15,7 @@
 
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
+            android:inputType="textCapWords"
             android:layout_height="wrap_content"
             android:hint="@string/player_name" />
     </android.support.design.widget.TextInputLayout>
