--- a/FootballMan/app/src/main/res/layout/fragment_add_team.xml
+++ b/FootballMan/app/src/main/res/layout/fragment_add_team.xml
@@ -19,6 +19,7 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textCapWords"
             android:hint="@string/team_name" />
     </android.support.design.widget.TextInputLayout>
 
