--- a/FootballMan/app/src/main/res/layout/player_in_game_raw.xml
+++ b/FootballMan/app/src/main/res/layout/player_in_game_raw.xml
@@ -7,14 +7,25 @@
               android:paddingBottom="4dp"
               android:paddingStart="4dp"
               android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
 
-    <TextView
+        <TextView
         android:id="@+id/player_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
+        android:textSize="15sp"
         />
-
+        <TextView
+            android:id="@+id/player_number"
+            android:layout_width="wrap_content"
+            android:textSize="15sp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
