--- a/FootballMan/app/src/main/res/layout/player_in_game_raw_tablet.xml
+++ b/FootballMan/app/src/main/res/layout/player_in_game_raw_tablet.xml
@@ -9,13 +9,25 @@
               android:paddingStart="4dp"
               android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/player_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="40sp"
-        />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/player_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            />
+        <TextView
+            android:id="@+id/player_number"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:textSize="25sp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
