--- a/Menu2/app/src/main/res/layout/fragment_administrator.xml
+++ b/Menu2/app/src/main/res/layout/fragment_administrator.xml
@@ -4,21 +4,12 @@
     android:layout_height="match_parent"
     tools:context="com.example.hristiyan.menu.fragments.AdministratorFragment">
 
-    <Button
-        android:id="@+id/add_button"
-        android:layout_width="@dimen/button_width"
-        android:textSize="@dimen/text_size"
-        android:padding="@dimen/default_padding"
-        android:layout_height="@dimen/button_height"
-        android:background="@drawable/button_selector"
-        android:layout_centerHorizontal="true"
-        android:text="@string/add" />
     <!-- TODO: Update blank fragment layout -->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/all_menus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/add_button" />
 
 </RelativeLayout>
