--- a/FootballMan/app/src/main/res/layout-sw720dp-land/fragment_start_match.xml
+++ b/FootballMan/app/src/main/res/layout-sw720dp-land/fragment_start_match.xml
@@ -73,6 +73,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
+                android:layout_marginBottom="20dp"
+                android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="35dp"
                 android:rotation="270"
@@ -105,6 +107,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="35dp"
                 android:paddingEnd="3dp"
+                android:layout_marginBottom="20dp"
+                android:layout_alignParentBottom="true"
                 android:paddingStart="3dp"
                 android:paddingTop="5dp"
                 android:rotation="270"
