--- a/FootballMan/app/src/main/res/layout/player_in_game_raw_tablet_land.xml
+++ b/FootballMan/app/src/main/res/layout/player_in_game_raw_tablet_land.xml
@@ -89,7 +89,7 @@
         <ImageView
             android:id="@+id/make_penalty"
             android:src="@mipmap/duzpa"
-            style="@style/InGameImageView"/>
+            style="@style/InGameImageViewLandTablet"/>
         <TextView
             android:id="@+id/get_penalties"
             android:layout_width="wrap_content"
