--- a/FootballMan/app/src/main/res/layout/fragment_home.xml
+++ b/FootballMan/app/src/main/res/layout/fragment_home.xml
@@ -14,22 +14,11 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycle_leagues"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:paddingTop="5dp"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="65dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginRight="27dp"
-        android:clickable="true"
-        android:src="@mipmap/ball_icon_round"/>
+    <include layout="@layout/start_match_floating_button" />
 </RelativeLayout>
