--- a/FootballMan/app/src/main/res/layout/fragment_persons.xml
+++ b/FootballMan/app/src/main/res/layout/fragment_persons.xml
@@ -11,21 +11,10 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/team_players"
         android:layout_width="match_parent"
-        android:layout_height="450dp"/>
+        android:layout_height="match_parent"/>
 
     <include layout="@layout/empty_layout"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/next_team"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/team_players"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
-        android:clickable="true"
-        android:src="@drawable/forward"/>
-
+    <include layout = "@layout/floating_button_next" />
 
 </RelativeLayout>
