--- a/FootballMan/app/src/main/res/layout/fragment_start_match.xml
+++ b/FootballMan/app/src/main/res/layout/fragment_start_match.xml
@@ -1,24 +1,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:id="@+id/game_layout"
-              android:layout_width="match_parent"
-              android:layout_weight="3"
-              android:layout_height="match_parent"
-              android:keepScreenOn="true"
-              android:orientation="vertical"
-              tools:context="com.apress.gerber.footballman.Fragments.StartMatchFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/game_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_weight="3"
 
+    android:keepScreenOn="true"
+    android:orientation="vertical"
+    tools:context="com.apress.gerber.footballman.Fragments.StartMatchFragment">
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/home_players"
         android:layout_width="match_parent"
-        android:layout_weight="1.2"
-        android:layout_height="0dp"/>
+        android:layout_height="0dp"
+        android:layout_weight="1.2" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#d3d3d3 " />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -27,111 +29,109 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_weight="0.3"
             android:layout_height="0dp"
-            >
+            android:layout_weight="0.3">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
                 android:gravity="right"
-                >
+                android:orientation="horizontal">
+
                 <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:src="@mipmap/red"
-                />
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@mipmap/red" />
 
                 <TextView
                     android:id="@+id/red_card_number_host"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
+                    android:layout_height="wrap_content" />
 
                 <ImageView
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginStart="10dp"
-                    android:src="@mipmap/yellow"/>
+                    android:src="@mipmap/yellow" />
 
                 <TextView
                     android:id="@+id/yellow_card_number_host"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
+                    android:layout_height="wrap_content" />
 
                 <ImageView
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginStart="10dp"
-                    android:src="@mipmap/faul"/>
+                    android:src="@mipmap/faul" />
 
                 <TextView
                     android:id="@+id/team_fauls_host"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/host_name"
                 android:layout_width="wrap_content"
+                android:ellipsize="marquee"
+                android:singleLine="true"
+                android:maxWidth="@dimen/max_width_team_name"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/home_result"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:textSize="40sp"
-                />
+                android:textSize="40sp" />
         </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@color/colorPrimary"/>
+            android:background="@color/colorPrimary" />
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_weight="0.3"
             android:layout_height="0dp"
-            >
+            android:layout_weight="0.3">
 
             <TextView
                 android:id="@+id/guest_name"
+                android:ellipsize="marquee"
+                android:singleLine="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:textSize="20sp"
-                />
+                android:maxWidth="@dimen/max_width_team_name"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/guest_result"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
+                android:layout_below="@id/guest_name"
                 android:layout_centerHorizontal="true"
-                android:textSize="40sp"
-                />
+                android:textSize="40sp" />
 
-            <include layout="@layout/cards"/>
+            <include layout="@layout/cards" />
         </RelativeLayout>
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#d3d3d3 " />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/guest_players"
-        android:layout_weight="1.2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        />
+        android:layout_weight="1.2" />
 
 </LinearLayout>
