--- a/FootballMan/app/src/main/res/layout/player_in_game_raw_tablet.xml
+++ b/FootballMan/app/src/main/res/layout/player_in_game_raw_tablet.xml
@@ -70,7 +70,7 @@
 
         <ImageView
             android:id="@+id/make_faul"
-            style="@style/InGameImageView"
+            style="@style/InGameImageViewTablet"
             android:src="@mipmap/faul"
             />
 
@@ -91,7 +91,7 @@
         <ImageView
             android:id="@+id/make_penalty"
             android:src="@mipmap/duzpa"
-            style="@style/InGameImageView"/>
+            style="@style/InGameImageViewTablet"/>
         <TextView
             android:id="@+id/get_penalties"
             android:layout_width="wrap_content"
