--- a/Menu2/app/src/main/res/layout/food_raw.xml
+++ b/Menu2/app/src/main/res/layout/food_raw.xml
@@ -2,16 +2,18 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:padding="@dimen/default_padding"
     android:layout_height="wrap_content">
 
-    <Button
+    <TextView
         android:id="@+id/food_name"
         android:layout_width="match_parent"
         android:layout_height="@dimen/button_height"
         android:layout_alignParentTop="true"
         android:layout_marginRight="10dp"
+        app:autoSizeTextType="uniform"
         android:layout_toLeftOf="@+id/nums_selected"
         android:background="@drawable/button_selector"
         android:padding="@dimen/default_padding"
