--- a/Menu2/app/src/main/res/layout/menu_raw.xml
+++ b/Menu2/app/src/main/res/layout/menu_raw.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:padding="@dimen/default_padding"
     android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/menu_name"
+    <TextView
+        android:id="@+id/menu_row_name"
         android:layout_width="match_parent"
         android:layout_alignParentLeft="true"
         android:textSize="@dimen/text_size"
         android:layout_toLeftOf="@+id/date_and_active_layout"
         android:layout_marginRight="20dp"
         android:layout_alignParentStart="true"
+        app:autoSizeTextType="uniform"
         android:padding="@dimen/default_padding"
         android:background="@drawable/button_selector"
         android:layout_height="@dimen/button_height"
