--- a/FootballMan/app/src/main/res/layout-sw720dp-land/fragment_start_match.xml
+++ b/FootballMan/app/src/main/res/layout-sw720dp-land/fragment_start_match.xml
@@ -28,6 +28,7 @@
 
         <RelativeLayout
             android:layout_width="0dp"
+            android:id="@+id/host_layout"
             android:layout_height="match_parent"
             android:layout_weight="0.25">
 
@@ -45,6 +46,7 @@
                 <TextView
                     android:id="@+id/red_card_number_host"
                     android:layout_width="wrap_content"
+                    android:textSize="18sp"
                     android:layout_height="wrap_content" />
 
                 <ImageView
@@ -55,6 +57,7 @@
                 <TextView
                     android:id="@+id/yellow_card_number_host"
                     android:layout_width="wrap_content"
+                    android:textSize="18sp"
                     android:layout_height="wrap_content" />
 
                 <ImageView
@@ -65,6 +68,7 @@
                 <TextView
                     android:id="@+id/team_fauls_host"
                     android:layout_width="wrap_content"
+                    android:textSize="18sp"
                     android:layout_height="wrap_content" />
             </LinearLayout>
 
@@ -96,6 +100,7 @@
 
         <RelativeLayout
             android:layout_width="0dp"
+            android:id="@+id/guest_layout"
             android:layout_height="match_parent"
             android:layout_weight="0.25">
 
@@ -135,6 +140,7 @@
                 <TextView
                     android:id="@+id/red_card_number"
                     android:layout_width="wrap_content"
+                    android:textSize="18sp"
                     android:layout_height="wrap_content" />
 
                 <ImageView
@@ -144,6 +150,7 @@
 
                 <TextView
                     android:id="@+id/yellow_card_number"
+                    android:textSize="18sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
@@ -154,6 +161,7 @@
 
                 <TextView
                     android:id="@+id/team_fauls"
+                    android:textSize="18sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
