--- a/FootballMan/app/src/main/res/layout/fragment_start_match.xml
+++ b/FootballMan/app/src/main/res/layout/fragment_start_match.xml
@@ -30,6 +30,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:id="@+id/host_layout"
             android:layout_weight="0.3">
 
             <LinearLayout
@@ -98,6 +99,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:id="@+id/guest_layout"
             android:layout_weight="0.3">
 
             <TextView
