--- a/FootballMan/app/src/main/res/layout/person_raw.xml
+++ b/FootballMan/app/src/main/res/layout/person_raw.xml
@@ -1,27 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:orientation="horizontal"
-              android:layout_width="wrap_content"
-                style="@style/paddings"
-              android:layout_height="wrap_content">
-    <include layout="@layout/buttons"/>
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/paddings"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <include
+        android:id="@+id/update_delete_buttons"
+        layout="@layout/buttons" />
+
+    <ImageView
+        android:id="@+id/ball"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="10dp"
+        android:src="@mipmap/ball_icon_round" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/person_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-      />
-    <TextView
-        android:id="@+id/person_number"
-        android:layout_width="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginLeft="15dp"
-        android:layout_height="wrap_content"
-        />
+
+        <TextView
+            android:id="@+id/person_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/person_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:textSize="20sp" />
     </LinearLayout>
-    <include layout ="@layout/ball"/>
 </RelativeLayout>
